Updated DESCRIPTION and new generated NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,4 @@ import(RCurl)
 import(devtools)
 importFrom(OAIHarvester,oaih_identify)
 importFrom(OAIHarvester,oaih_list_metadata_formats)
-importFrom(OAIHarvester,ohi_transform)
+importFrom(OAIHarvester,oaih_transform)
