--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: pangaear
 Title: What the package does (short line)
 Version: 0.1
-Authors@R: "First Last <first.last@example.com> [aut, cre]"
+Authors@R: person("Scott", "Chamberlain", email = "scott@email.com", role =
+    c("aut","cre"))
 Description: What the package does (paragraph)
 Depends:
     R (>= 3.1.1)
 License: What license is it under?
 LazyData: true
 Imports:
-    OAIHarvester
+    OAIHarvester,
+    RCurl,
+    devtools
