add pg_list_sets function per #10

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(pg_getrecord)
 export(pg_identify)
 export(pg_list_metadata_formats)
 export(pg_list_records)
+export(pg_list_sets)
 import(OAIHarvester)
 import(RCurl)
 importFrom(OAIHarvester,oaih_identify)
 importFrom(OAIHarvester,oaih_list_metadata_formats)
+importFrom(OAIHarvester,oaih_list_sets)
 importFrom(OAIHarvester,oaih_transform)
 importFrom(RCurl,getURLContent)
