--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,7 @@ export(pg_get_record)
 export(pg_identify)
 export(pg_list_metadata_formats)
 export(pg_list_records)
-import(OAIHarvester)
-import(RCurl)
+importFrom(OAIHarvester,oaih_get_record)
 importFrom(OAIHarvester,oaih_identify)
 importFrom(OAIHarvester,oaih_list_metadata_formats)
 importFrom(OAIHarvester,oaih_list_records)
