--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,5 @@ URL: https://github.com/ropensci/pangaear
 BugReports: https://github.com/ropensci/pangaear/issues
 Imports:
     OAIHarvester,
-    RCurl
+    RCurl,
+    XML
