--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: R client for the Pangaea Database.
 Version: 0.0.1.99
 Date: 2014-09-05
 Authors@R: c(person("Scott", "Chamberlain", email = "myrmecocystus@gmail.com",
-    role = c("aut","cre")), person("Kara", "Woo", email = "kara@gmail.com",
+    role = c("aut","cre")), person("Kara", "Woo", email = "woo.kara@gmail.com",
     role = "aut"), person("Andrew", "MacDonald", email =
     "a.a.m.macdonald@gmail.com", role = "aut"), person("Naupaka ", "Zimmerman",
     email = "naupaka@gmail.com", role = "aut"), person("Gavin", "Simpson",
