--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pangaear
-Title: R client for the Pangaea Database.
-Version: 0.0.1.99
-Date: 2014-09-05
+Title: R Client for the online Pangaea Database.
+Version: 0.0.2.99
+Date: 2014-10-27
 Authors@R: c(person("Scott", "Chamberlain", email = "myrmecocystus@gmail.com",
     role = c("aut","cre")), person("Kara", "Woo", email = "woo.kara@gmail.com",
     role = "aut"), person("Andrew", "MacDonald", email =
