--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,5 @@ Roxygen: list(wrap = FALSE)
 URL: https://github.com/ropensci/pangaear
 BugReports: https://github.com/ropensci/pangaear/issues
 Imports:
-    OAIHarvester,
-    RCurl,
+    httr,
     XML
