removed RCurl import, ignoring readme.mrd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(XML,xmlRoot)
 importFrom(XML,xmlToList)
 importFrom(XML,xmlValue)
 importFrom(httr,GET)
+importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
