--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,14 +19,18 @@ export(pg_list_identifiers)
 export(pg_list_metadata_formats)
 export(pg_list_records)
 export(pg_list_sets)
+export(pg_search)
 export(type_sum)
+importFrom(XML,readHTMLTable)
 importFrom(XML,xmlChildren)
 importFrom(XML,xmlParse)
 importFrom(XML,xmlRoot)
 importFrom(XML,xmlToList)
 importFrom(XML,xmlValue)
+importFrom(XML,xpathApply)
 importFrom(httr,GET)
 importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
+importFrom(stringr,str_extract)
