added cache list and clear fxns, closes #41

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(type_sum,integer)
 S3method(type_sum,logical)
 S3method(type_sum,matrix)
 S3method(type_sum,numeric)
+export(pg_cache_clear)
+export(pg_cache_list)
 export(pg_data)
 export(pg_get_record)
 export(pg_identify)
