added builds to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ on_failure:
   - ./travis-tool.sh dump_logs
 
 notifications:
- slack: ropensci:wh30e1MP9Am3wXb2wJx1ZRFi
+ slack: ropensci:wh30e1MP9Am3wXb2wJx1ZRFi:builds
