--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: pangaear
-Title: R Client for the online Pangaea Database.
+Title: R Client for the online Pangaea Database
+Description: R client for the Pangaea Database.
 Version: 0.0.6.99
 Date: 2014-10-28
 Authors@R: c(person("Scott", "Chamberlain", email = "myrmecocystus@gmail.com",
@@ -8,7 +9,6 @@ Authors@R: c(person("Scott", "Chamberlain", email = "myrmecocystus@gmail.com",
     "a.a.m.macdonald@gmail.com", role = "aut"), person("Naupaka ", "Zimmerman",
     email = "naupaka@gmail.com", role = "aut"), person("Gavin", "Simpson",
     email = "ucfagls@gmail.com", role = "aut"))
-Description: R client for the Pangaea Database.
 License: MIT + file LICENSE
 LazyData: true
 Roxygen: list(wrap = FALSE)
