--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: r
 
 notifications:
-	slack: ropensci:6CDrHoua0c7LCT9BgnxO4dVQ:builds
+  slack:
+    secure: fee+yd3SW53ASTFm0ZH3/HKD7wUn1zJL+LHbwJErIMhAemo2FcNaLDGF5TXLuVCSMMnIE+rc8c8NEH0Mf+Jw4+EiZEfEsbu4Ai5xxx81jCJV3sCRAQZG+Tpes+zR3rnxxs7LyM9EcVGf/ypMCLREdAM1rluNrbAe14DZI0b4pjw=
 	email:
 	 on_success: change
 	 on_failure: change
