switched to using oai for oai requests, importFrom fixed up

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ BugReports: https://github.com/ropensci/pangaear/issues
 Imports:
     httr (>= 1.0.0),
     XML,
-    stringr
+    stringr,
+    oai
 RoxygenNote: 5.0.1
