--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,4 +35,9 @@ importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
+importFrom(oai,get_records)
+importFrom(oai,id_entify)
+importFrom(oai,list_identifiers)
+importFrom(oai,list_metadataformats)
+importFrom(oai,list_sets)
 importFrom(stringr,str_extract)
