--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
 importFrom(oai,get_records)
-importFrom(oai,id_entify)
+importFrom(oai,id)
 importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
