import utils, stats, methods pkgs, readme badge update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,8 +35,12 @@ importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
+importFrom(methods,is)
 importFrom(oai,get_records)
 importFrom(oai,id)
 importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
+importFrom(stats,setNames)
+importFrom(utils,head)
+importFrom(utils,read.csv)
