use id() instead of id_entify

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
 importFrom(methods,is)
 importFrom(oai,get_records)
-importFrom(oai,id_entify)
+importFrom(oai,id)
 importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
