fixed pg_search fix #44 via fixing html parsing XML replaced with xml2 fix #42 bumped dev version updated readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,13 +23,6 @@ export(pg_list_records)
 export(pg_list_sets)
 export(pg_search)
 export(type_sum)
-importFrom(XML,readHTMLTable)
-importFrom(XML,xmlChildren)
-importFrom(XML,xmlParse)
-importFrom(XML,xmlRoot)
-importFrom(XML,xmlToList)
-importFrom(XML,xmlValue)
-importFrom(XML,xpathApply)
 importFrom(httr,GET)
 importFrom(httr,config)
 importFrom(httr,content)
@@ -42,5 +35,10 @@ importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
 importFrom(stats,setNames)
+importFrom(tibble,as_data_frame)
 importFrom(utils,head)
 importFrom(utils,read.csv)
+importFrom(xml2,read_html)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_text)
