--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: packages
 
 notifications:
   email:
-    on_success: change
-    on_failure: change
+    on_success: never
+    on_failure: never
   slack:
     secure: XjCNOufVyfFUl9MIW6Vh7d/lcInse0lM3Le/XAdOJLYMpqwGiVQjhbxcHU68uXSX2LmuraLA0PsXTq6Hw2ciNUFo5oqCdTkhTNRbk8S5mzZWupZzGR1JEdAtP3MlOQcRmeObzw35pEdJh4fmG7OPhq4vLCeh915oClmFYyoXBgk=
