--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Client for the 'Pangaea' Database
 Description: Tools to interact with the 'Pangaea' Database (http://
     www.pangaea.de/), including functions for searching for data, fetching 'datasets'
     by 'dataset' 'ID', and working with the 'Pangaea' 'OAI-PMH' service.
-Version: 0.1.0.9300
-Date: 2016-02-05
+Version: 0.1.0.9800
+Date: 2016-05-06
 Authors@R: c(person("Scott", "Chamberlain",
 		email = "myrmecocystus@gmail.com", role = c("aut","cre")),
     person("Kara", "Woo", email = "woo.kara@gmail.com", role = "aut"),
@@ -20,6 +20,7 @@ Imports:
     stats,
     utils,
     httr (>= 1.0.0),
-    XML,
-    oai
+    xml2,
+    oai,
+    tibble
 RoxygenNote: 5.0.1
