--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,12 @@ importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,write_disk)
-importFrom(methods,is)
 importFrom(oai,get_records)
 importFrom(oai,id)
 importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
+importFrom(rappdirs,user_cache_dir)
 importFrom(stats,setNames)
 importFrom(tibble,as_data_frame)
 importFrom(utils,head)
