update cran comments and news, use covr now, update readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: r
 sudo: false
 cache: packages
 
+after_success:
+ - Rscript -e 'covr::codecov()'
+
 notifications:
   email:
     on_success: never
