--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     stats,
     utils,
     httr (>= 1.2.0),
+    jsonlite (>= 1.1),
     rappdirs (>= 0.3.1),
     xml2 (>= 1.0.0),
     oai (>= 0.2.0),
