#52 add run examples to travis file, an as-cran

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ cache: packages
 after_success:
  - Rscript -e 'covr::codecov()'
 
+env:
+  global:
+    - R_CHECK_ARGS="--run-dontrun --as-cran"
+
 notifications:
   email:
     on_success: never
