--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(pg_list_metadata_formats)
 export(pg_list_records)
 export(pg_list_sets)
 export(pg_search)
+export(pg_search_es)
 importFrom(httr,GET)
 importFrom(httr,config)
 importFrom(httr,content)
