--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Tools to interact with the 'Pangaea' Database
     (<https://www.pangaea.de>), including functions for searching for data,
     fetching 'datasets' by 'dataset' 'ID', and working with the 'Pangaea'
     'OAI-PMH' service.
-Version: 0.3.1.9100
+Version: 0.3.3.9210
 Authors@R: c(person("Scott", "Chamberlain",
 		email = "myrmecocystus@gmail.com", role = c("aut","cre")),
     person("Kara", "Woo", email = "woo.kara@gmail.com", role = "aut"),
@@ -17,7 +17,7 @@ URL: https://github.com/ropensci/pangaear
 BugReports: https://github.com/ropensci/pangaear/issues
 Roxygen: list(markdown = TRUE)
 Imports:
-    httr (>= 1.2.0),
+    crul (>= 0.4.0),
     jsonlite (>= 1.1),
     rappdirs (>= 0.3.1),
     xml2 (>= 1.0.0),
