--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ LazyData: true
 URL: https://github.com/ropensci/pangaear
 BugReports: https://github.com/ropensci/pangaear/issues
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
 Imports:
     crul (>= 0.4.0),
     jsonlite (>= 1.1),
@@ -26,5 +27,6 @@ Imports:
     png
 Suggests:
     roxygen2 (>= 6.0.1),
+    knitr,
     testthat
 RoxygenNote: 6.0.1
