--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Tools to interact with the 'Pangaea' Database
     (<https://www.pangaea.de>), including functions for searching for data,
     fetching 'datasets' by 'dataset' 'ID', and working with the 'Pangaea'
     'OAI-PMH' service.
-Version: 0.6.0.9100
+Version: 0.6.1.9100
 Authors@R: c(person("Scott", "Chamberlain",
 		email = "myrmecocystus@gmail.com", role = c("aut","cre")),
     person("Kara", "Woo", email = "woo.kara@gmail.com", role = "aut"),
@@ -17,6 +17,8 @@ URL: https://github.com/ropensci/pangaear
 BugReports: https://github.com/ropensci/pangaear/issues
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
+Encoding: UTF-8
+Language: en-US
 Imports:
     crul (>= 0.4.0),
     jsonlite (>= 1.5),
@@ -28,4 +30,4 @@ Imports:
 Suggests:
     knitr,
     testthat
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
