--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,pangaea)
 S3method(print,pg_identify)
+export(pg_cache)
 export(pg_cache_clear)
 export(pg_cache_list)
 export(pg_data)
@@ -14,12 +15,12 @@ export(pg_list_sets)
 export(pg_search)
 export(pg_search_es)
 importFrom(crul,HttpClient)
+importFrom(hoardr,hoard)
 importFrom(oai,get_records)
 importFrom(oai,id)
 importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
-importFrom(rappdirs,user_cache_dir)
 importFrom(tibble,as_data_frame)
 importFrom(xml2,read_html)
 importFrom(xml2,xml_attr)
