--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ importFrom(oai,list_identifiers)
 importFrom(oai,list_metadataformats)
 importFrom(oai,list_sets)
 importFrom(rappdirs,user_cache_dir)
-importFrom(tibble,as_data_frame)
+importFrom(tibble,as_tibble)
 importFrom(xml2,read_html)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_find_all)
