--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Description: Tools to interact with the 'Pangaea' Database
     'OAI-PMH' service.
 Version: 0.8.2.92
 Authors@R: c(person("Scott", "Chamberlain",
-		email = "myrmecocystus@gmail.com", role = c("aut","cre")),
+		email = "myrmecocystus@gmail.com", role = c("aut","cre"),
+        comment = c(ORCID="0000-0003-1444-9135")),
     person("Kara", "Woo", email = "woo.kara@gmail.com", role = "aut"),
     person("Andrew", "MacDonald", email = "a.a.m.macdonald@gmail.com", role = "aut"),
     person("Naupaka ", "Zimmerman", email = "naupaka@gmail.com", role = "aut"),
