--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ r_binary_packages:
 matrix:
   include:
     - os: linux
-      r: oldrel
-    - os: linux
       r: release
       env: R_CODECOV=true
+    - os: linux
+      r: devel
+      env: _R_CHECK_LENGTH_1_LOGIC2_=TRUE
 
 after_success:
   - if [[ "${R_CODECOV}" ]]; then R -e 'covr::codecov()'; fi
