--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Tools to interact with the 'Pangaea' Database
     (<https://www.pangaea.de>), including functions for searching for data,
     fetching 'datasets' by 'dataset' 'ID', and working with the 'Pangaea'
     'OAI-PMH' service.
-Version: 1.0.0.91
+Version: 1.1.0
 Authors@R: c(person("Scott", "Chamberlain",
 		email = "myrmecocystus@gmail.com", role = c("aut","cre"),
         comment = c(ORCID="0000-0003-1444-9135")),
@@ -15,7 +15,7 @@ Authors@R: c(person("Scott", "Chamberlain",
 License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/ropensci/pangaear (devel),
-    https://docs.ropensci.org/pangaear (documentation)
+    https://docs.ropensci.org/pangaear/ (documentation)
 BugReports: https://github.com/ropensci/pangaear/issues
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
@@ -32,7 +32,8 @@ Imports:
 Suggests:
     knitr,
     testthat,
-    vcr
+    vcr,
+    markdown
 RoxygenNote: 7.1.1
 X-schema.org-applicationCategory: Biodiversity
 X-schema.org-keywords: Pangaea, environmental science, earth science, archive, paleontology, ecology, chemistry, atmosphere
